# EsunnyITap.Net

./: .gitignore  Build.md  EsunnyITap.Net.sln  ReadMe.en.md  ReadMe.md
.nuke/: parameters.json
src/EsunnyITap.Net/: ErrorMap.cs  EsunnyITap.Net.csproj  InsertOrderExtensions.cs  SWIGStringHelper.cs
src/EsunnyITap.Net/Swig/: EsunnyITapApi.cs  EsunnyITapApiPINVOKE.cs  ITapTradeAPI.cs  ITapTradeAPINotify.cs  SWIGTYPE_p_a_51__char.cs  TapAPIAccQryReq.cs  TapAPIAccountCashAdjustQryReq.cs  TapAPIAccountCashAdjustQryRsp.cs  TapAPIAccountFeeRentQryReq.cs  TapAPIAccountFeeRentQryRsp.cs  TapAPIAccountIPOAddReq.cs  TapAPIAccountIPOCancelReq.cs  TapAPIAccountIPOQryReq.cs  TapAPIAccountIPOQryRsp.cs  TapAPIAccountInfo.cs  TapAPIAccountMarginRentQryReq.cs  TapAPIAccountMarginRentQryRsp.cs  TapAPIAmendOrder.cs  TapAPIApplicationInfo.cs  TapAPIAuthPasswordReq.cs  TapAPIAvailableApplyQryReq.cs  TapAPIAvailableApplyQryRsp.cs  TapAPIBillQryReq.cs  TapAPIBillQryRsp.cs  (+74 more)
src/EsunnyITapApi/: CMakeLists.txt  SwigGenerate.sh  convert-header-to-utf8.sh  gen-error-map-cs.sh  swig.i  swig_wrap.cxx  swig_wrap.h
src/EsunnyITapApi/include/: iTapAPICommDef.h  iTapAPIError.h  iTapTradeAPI.h  iTapTradeAPIDataType.h
src/EsunnyITapApi/linux-build/: CMakeCache.txt  Makefile  cmake_install.cmake
src/EsunnyITapApi/win-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  EsunnyITapApi.sln  EsunnyITapApi.vcxproj  EsunnyITapApi.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
tests/EsunnyITap.Demo/: EsunnyITap.Demo.csproj  Program.cs  nuget.config
